--- a/mexican-futuristic-fair/mexican-futuristic-fair.vcxproj.filters
+++ b/mexican-futuristic-fair/mexican-futuristic-fair.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClInclude Include="Window.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ModelJerarquia.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Camera.cpp">
@@ -105,6 +108,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Window.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ModelJerarquia.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
