--- a/mexican-futuristic-fair/mexican-futuristic-fair.vcxproj
+++ b/mexican-futuristic-fair/mexican-futuristic-fair.vcxproj
@@ -164,6 +164,8 @@
   <ItemGroup>
     <ClCompile Include="FreeCamera.cpp" />
     <ClCompile Include="DirectionalLight.cpp" />
+    <ClCompile Include="MeshBuilder.cpp" />
+    <ClCompile Include="MeshBuilder.h" />
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Material.cpp" />
