--- a/mexican-futuristic-fair/mexican-futuristic-fair.vcxproj
+++ b/mexican-futuristic-fair/mexican-futuristic-fair.vcxproj
@@ -152,8 +152,8 @@
     <ClInclude Include="ObjectFocusCamera.h" />
     <ClInclude Include="PointLight.h" />
     <ClInclude Include="Shader_light.h" />
+    <ClInclude Include="SimpleModel.h" />
     <ClInclude Include="Skybox.h" />
-    <ClInclude Include="Sphere.h" />
     <ClInclude Include="SpotLight.h" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="Texture.h" />
@@ -175,8 +175,8 @@
     <ClCompile Include="ObjectFocusCamera.cpp" />
     <ClCompile Include="PointLight.cpp" />
     <ClCompile Include="Shader_light.cpp" />
+    <ClCompile Include="SimpleModel.cpp" />
     <ClCompile Include="Skybox.cpp" />
-    <ClCompile Include="Sphere.cpp" />
     <ClCompile Include="SpotLight.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="ThirdPersonCamera.cpp" />
